# jepedia

./: .gitignore  404.html  LICENSE  README.md  index.html  jupyter_notebook_config.py  mkdocs.yml  pyproject.toml  tasks.py
docs/books/tiny_habits/: chapter1___the_elements_of_behaviour.md  chapter2___motivation.md  index.md
docs/extras/: mathjax_config.js
docs/mathematics/: calculus.ipynb  complex_numbers.ipynb  functions.ipynb  volume_elements.ipynb
docs/personal/: cambridge_learning.md  daily_routine.md  guiding_principles.md  habits.md
docs/physics/: gravitational_and_electromagnetic_fields.ipynb  rotational_mechanics.ipynb
jupyterlab-jepedia/: README.md  package.json  tsconfig.json
jupyterlab-jepedia/src/: index.ts
mathematics/complex_numbers/: index.html
mathematics/volume_elements/: index.html
physics/: index.html
physics/rotational_mechanics/: index.html
search/: search_index.json
