[tool.poetry]
name = "jepedia"
version = "0.1.0"
description = "Collection of my notes"
authors = ["Jeppe Klitgaard <jeppe@dapj.dk>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.1.2"
numpy = "^1.19.1"
jupyterlab = "^2.2.7"
mkdocs = "^1.1.2"
mkdocs-material = "^5.5.12"
jupyterlab-git = "^0.21.1"
invoke = "^1.4.1"
mknotebooks = "^0.6.0"
Pygments = "^2.6.1"

[tool.poetry.dev-dependencies]
pylint = "^2.6.0"
black = "^20.8b1"
isort = "^5.5.1"
cookiecutter = "^1.7.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
